# OProj_Adaptive

./: .gitignore  CMakeLists.txt  ProjectContext.txt  README.md  README사용법(이거 읽어주세요).txt  aim_text.txt  compile_shaders.bat
documentsforProj/: autobench_20260528_010219.csv  autobench_20260528_014356.csv  main.py
maps/: test_city.glb
maps/map/: 1.glb  3.glb  4.glb
maps/mtl/: 2.mtl
shaders/: bloom_blur.frag  bloom_bright.frag  bloom_composite.frag  common_env.glsl  deferred_light.frag  deferred_light.vert  gbuffer.frag  gizmo.vert  post.vert  scene.frag  scene.vert  scene_instanced.vert  shadow.vert  sky.frag
src/: AdaptiveOpt.h  Camera.cpp  Camera.h  GLTFLoader.cpp  GLTFLoader.h  MeshLoader.h  PerformanceStats.cpp  PerformanceStats.h  Replay.cpp  Replay.h  SceneLoader.cpp  SceneLoader.h  VulkanApp.cpp  VulkanApp.h  main.cpp  stb_image_impl.cpp
tools/: insert_mesh_cache.py  make_dungeon_glb.py  make_forest_glb.py  make_test_glb.py  patch_buildscene.py
tools/unity/: ReplayCameraBenchmark.cs
